--- a/aragon-backend/package.json
+++ b/aragon-backend/package.json
@@ -26,7 +26,9 @@
     "@aws-sdk/client-s3": "^3.812.0",
     "@aws-sdk/s3-request-presigner": "^3.812.0",
     "@prisma/client": "^4.14.0",
+    "@vladmandic/face-api": "^1.7.15",
     "aws-sdk": "^2.1348.0",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
